--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
 	<string-array name="tasty_oli_for_fish">
@@ -146,5 +146,65 @@
         <item>Между ними положить мелко нарезанный зеленый лук.</item>
         <item>Картофель полить приготовленным соусом из масла, уксуса, соли и перца.</item>
     </string-array>
+
+<string-array name="babka_iz_belogo">
+	<item>Срезать корки с батона белого хлеба, нарезать его тонкими ломтиками, часть хлеба нарезать кубиками и подсушить. Молоко, сырое яйцо и 2 ст. ложки сахара перемешать и слегка взбить веничком.</item>
+	<item>Яблоки очистить от кожуры и семечек, нарезать в виде кубиков и пересыпать сахаром. Форму или сковороду смазать густым слоем сливочного масла. Ломтики белого хлеба смочить взбитой яичной массой и обложить ими дно и боковые стенки формы или сковороды. </item>
+	<item>Подсушенные хлебные кубики полить сливочным маслом и перемешать с яблоками. Туда же добавить немного натертой лимонной цедры или ванилина. </item>
+	<item>Яблоки, перемешанные с хлебными кубиками, выложить на середину формы, наполнив ее до краев. </item>
+	<item>Сверху форму надо также накрыть ломтиками хлеба, смоченного во взбитой яичной массе, и поставить форму на 40–50 минут в духовой шкаф или в печь со средним жаром.</item>
+</string-array>
+
+<string-array name="baklajani_s_lukom">
+	<item>Баклажаны обмыть, срезать концы, ошпарить, нарезать тонкими ломтиками, посолить, обвалять с обеих сторон в муке и обжарить на масле. </item>
+	<item>Репчатый лук нарезать кольцами и тоже обжарить на масле. Готовые баклажаны переложить на блюдо, чередуя их с жареным луком, на сковороду , где жарились баклажаны, положить сметану, томат-пюре, смешать, дать прокипеть и затем этим соусом залить баклажаны.</item>
+</string-array>
+
+<string-array name="baklazani_v_smetane">
+	<item>Баклажаны очистить, обмыть, нарезать ломтиками, положить в горячую подсоленную воду на 5 минут, затем откинуть на сито или дуршлаг, дать стечь воде, обвалять в муке и обжарить. </item>
+	<item>После этого баклажаны положить в кастрюлю, залить сметаной и тушить 30-40 минут. При подаче на стол посыпать зеленью петрушки или укропом.</item>
+</string-array>
+
+<string-array name="baklazani_farsh">
+	<item>Баклажаны промыть, срезать концы, сделать вдоль небольшой надрез, через который чайной ложкой удалить семена. </item>
+	<item>После этого баклажаны опустить на 5 минут в кипящую подсоленную воду, наполнить подготовленным овощным или грибным фаршем, уложить на сковороду или противень, смазанный жиром, залить сметаной и запекать в духовом шкафу, примерно, 1 час.</item>
+</string-array>
+
+<string-array name="baranina_jarenaya">
+	<item>Кусок баранины (ножку, почечное место) обмыть, зачистить, посыпать солью и целым куском положить на противень или сковороду; полить баранину 2–3 ст. ложками растопленного масла, поставить в духовой шкаф и жарить до готовности, периодически поливая образовавшимся соком.</item>
+	<item>Готовую баранину нарезать ломтиками, уложить на блюдо, прибавить гарнир — картофель отварной с маслом или жареный, а также фасоль в томате или масле, посыпать зеленью петрушки или укропом и полить процеженным соком.</item>
+</string-array>
+
+<string-array name="baranina_v_belom_souse">
+	<item>Баранину (заднюю часть, грудинку, лопатку) обмыть, положить в кастрюлю и залить кипящей водой, чтобы она только покрыла мясо, кастрюлю накрыть крышкой и поставить на слабый огонь. </item>
+	<item>После закипания снять накипь и варить при слабом кипении 1–1 1/2 часа. Через 30–40 минут после начала варки добавить очищенные и промытые овощи и соль. </item>
+	<item>Готовую баранину и овощи вынуть из бульона, баранину нарезать тонкими ломтиками, уложить на блюдо, загарнировать отварным картофелем, нарезанными овощами и полить белым соусом, приготовленным на бульоне, полученном при варке баранины.</item>
+</string-array>
+
+<string-array name="baranina_s_zeleni">
+	<item>Нарезанную небольшими кусками баранину посолить, посыпать перцем, обжарить на масле, переложить в неглубокую кастрюлю, добавить предварительно замоченную фасоль, 2 1/2 — 3 стакана воды и варить около часа. </item>
+	<item>Затем добавить слегка поджаренный лук, нарезанные помидоры и тушить в течение 30–40 минут. При подаче к столу посыпать зеленью петрушки.</item>
+</string-array>
+
+<string-array name="baranina_s_risom">
+	<item>Обмытую баранину (грудинку или лопатку) нарубить, удалив из лопатки трубчатые кости, посыпать солью, молотым перцем и обжарить на сковороде.</item>
+	<item> После этого куски мяса, не снимая со сковороды, посыпать мелко нарезанным луком и жарить еще несколько минут. </item>
+	<item>Обжаренную баранину сложить в неглубокую кастрюлю, залить 2–3 стаканами бульона или воды, добавить томат-пюре и поставить тушить.</item>
+	<item> Через 1–1 1/2 часа (молодую баранину через 40–50 минут) после начала тушения положить стакан риса, промытого и проваренного в течение 10 минут в кипящей воде, размешать, накрыть крышкой и тушить еще 30 минут. </item>
+	<item>Подать на стол в посуде, в которой баранина готовилась.</item>
+</string-array>
+
+<string-array name="baranina_s_fasoliu">
+	<item>Нарезанную небольшими кусками баранину посолить, посыпать перцем, обжарить на масле, переложить в неглубокую кастрюлю, добавить предварительно замоченную фасоль, 2 1/2 — 3 стакана воды и варить около часа. </item>
+	<item>Затем добавить слегка поджаренный лук, нарезанные помидоры и тушить в течение 30–40 минут. При подаче к столу посыпать зеленью петрушки.</item>
+</string-array>
+
+<string-array name="baranina_tushonaya_s_ovo">
+	<item>Баранину хорошо обмыть, нарубить небольшими кусками и, не удаляя костей, сложить в кастрюлю и залить 2–3 стаканами горячей воды.</item>
+	<item>Кастрюлю накрыть крышкой и поставить на огонь. Как только вода закипит, добавить 2–3 картофелины, соль и варить 1 час. </item>
+	<item>После этого баранину переложить шумовкой в неглубокую кастрюлю; сверху баранины положить очищенную и промытую капусту, нарезанную кубиками морковь, лук, репу и картофель, нарезанные дольками, лавровый лист (1–2 листика), 5–8 горошин перца (или 1/10 шт. стручкового) и 4–5 шт. гвоздики.</item>
+	<item>Из бульона вынуть сваренный картофель, протереть его сквозь волосяное сито, соединить с процеженным бульоном, которым залить мясо и овощи, и поставить варить на слабый огонь на 30–40 минут.</item>
+	<item>При подаче на стол посыпать сверху зеленью петрушки или укропом.</item>
+</string-array>
 
 </resources>
