--- a/app/src/main/res/layout/navdrawer.xml
+++ b/app/src/main/res/layout/navdrawer.xml
@@ -103,50 +103,7 @@
             </LinearLayout>
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/txtDish"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:orientation="vertical"
-                android:layout_marginTop="5dp">
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/txtDishOfADay"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="20dp"
-                        android:id="@+id/txtDishOfADayIcon"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="15dp"
-                        android:src="@drawable/ic_recepies_dr"
-                        android:layout_marginRight="0dp" />
-                    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                        android:background="@android:color/transparent"
-                        android:text="Блюдо дня"
-                        android:textStyle="bold"
-                        android:singleLine="false"
-                        android:focusableInTouchMode="true"
-                        android:fontFamily="sans-serif"
-                        android:focusable="false"
-                        android:elegantTextHeight="false"
-                        android:editable="false"
-                        android:paddingTop="16dp"
-                        android:paddingRight="16dp"
-                        android:paddingBottom="16dp"
-                        android:paddingLeft="25dp"
-                        android:id="@+id/addDishOfADay" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/txtAllRecepies"
+                android:id="@+id/txtAllRecipes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
