--- a/app/src/main/res/layout/card_view_ingregient_color.xml
+++ b/app/src/main/res/layout/card_view_ingregient_color.xml
@@ -14,12 +14,12 @@
         android:layout_height="wrap_content">
 
         <View
-            android:layout_width="7dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:background="@color/red"
             android:id="@+id/separator"
             android:saveEnabled="false"
-            android:rotation="10"
+
             android:layout_marginLeft="100dp" />
 
         <TextView
@@ -42,7 +42,7 @@
             android:id="@+id/imageView3"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:src="@drawable/item_cat"
+            android:src="@drawable/sushi"
             android:scaleType="centerCrop" />
 
     </RelativeLayout>
