--- a/app/src/main/res/layout/fragment_recycler_all_recipes.xml
+++ b/app/src/main/res/layout/fragment_recycler_all_recipes.xml
@@ -7,5 +7,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/all_recipes_recycler"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="@color/grey" />
 </LinearLayout>
