--- a/app/src/main/res/layout/framgent_start.xml
+++ b/app/src/main/res/layout/framgent_start.xml
@@ -30,12 +30,19 @@
             android:id="@+id/numOfRecipesTV" />
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/start_recycler"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="3" />
+
+  <!--  <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/start_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:layout_weight="3">
     </android.support.v7.widget.RecyclerView>
-
+-->
 </LinearLayout>
