--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -202,7 +202,8 @@
 <string-array name="baranina_tushonaya_s_ovo">
 	<item>Баранину хорошо обмыть, нарубить небольшими кусками и, не удаляя костей, сложить в кастрюлю и залить 2–3 стаканами горячей воды.</item>
 	<item>Кастрюлю накрыть крышкой и поставить на огонь. Как только вода закипит, добавить 2–3 картофелины, соль и варить 1 час. </item>
-	<item>После этого баранину переложить шумовкой в неглубокую кастрюлю; сверху баранины положить очищенную и промытую капусту, нарезанную кубиками морковь, лук, репу и картофель, нарезанные дольками, лавровый лист (1–2 листика), 5–8 горошин перца (или 1/10 шт. стручкового) и 4–5 шт. гвоздики.</item>
+	<item>После этого баранину переложить шумовкой в неглубокую кастрюлю; сверху баранины положить
+        очищенную и промытую капусту, нарезанную кубиками морковь, лук, репу и картофель, нарезанные дольками, лавровый лист (1–2 листика), 5–8 горошин перца (или 1/10 шт. стручкового) и 4–5 шт. гвоздики.</item>
 	<item>Из бульона вынуть сваренный картофель, протереть его сквозь волосяное сито, соединить с процеженным бульоном, которым залить мясо и овощи, и поставить варить на слабый огонь на 30–40 минут.</item>
 	<item>При подаче на стол посыпать сверху зеленью петрушки или укропом.</item>
 </string-array>
