--- a/app/src/main/res/layout/framgent_start.xml
+++ b/app/src/main/res/layout/framgent_start.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,18 +8,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:id="@+id/container_with_image">
+        android:layout_weight="1">
 
         <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/flexible_space_image_height"
+            android:layout_height="wrap_content"
             android:id="@+id/startFridgeButton"
             android:background="@drawable/interiorpng"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,22 +26,9 @@
             android:textColor="@color/white"
             android:textSize="150sp"
             android:text="5"
-            android:id="@+id/numOfRecipesTV"
-            android:layout_alignBottom="@+id/startFridgeButton"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerInParent="true"
+            android:id="@+id/numOfRecipesTV" />
     </RelativeLayout>
-
-    <View
-        android:id="@+id/overlay"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/flexible_space_image_height"
-        android:background="?attr/colorPrimary" />
-
-    <View
-        android:id="@+id/list_background"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white" />
 
     <com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView
         android:layout_width="wrap_content"
@@ -52,12 +37,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_weight="3" />
 
-    <!--  <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/start_recycler"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:scrollbars="vertical"
-          android:layout_weight="3">
-      </android.support.v7.widget.RecyclerView>
-  -->
-</FrameLayout>
+  <!--  <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/start_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:layout_weight="3">
+    </android.support.v7.widget.RecyclerView>
+-->
+</LinearLayout>
