--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -7,20 +7,8 @@
     <ImageView
         android:layout_width="169dp"
         android:layout_height="169dp"
-        android:id="@+id/imageView2"
+        android:id="@+id/category_image"
         android:src="@drawable/item_cat"
         android:layout_marginLeft="10dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView5"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_alignLeft="@+id/imageView2"
-        android:layout_alignStart="@+id/imageView2"
-        android:layout_marginLeft="35dp"
-        android:layout_marginBottom="15dp" />
 
 </RelativeLayout>
