--- a/app/src/main/res/layout/fragment_gridview_categories.xml
+++ b/app/src/main/res/layout/fragment_gridview_categories.xml
@@ -8,7 +8,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/categoriewGridView"
         android:numColumns="2"
-        android:horizontalSpacing="5dp"
+        android:horizontalSpacing="0dp"
         android:verticalSpacing="5dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="#e8333333"
+        android:paddingTop="20dp" />
 </LinearLayout>
