--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,4 +12,20 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="images_for_categories">
+        <item>@drawable/category_meat</item>
+        <item>@drawable/category_bird</item>
+        <item>@drawable/category_fish</item>
+        <item>@drawable/category_seaproducts</item>
+        <item>@drawable/category_vegetables</item>
+        <item>@drawable/category_fruits</item>
+        <item>@drawable/category_bakalei</item>
+        <item>@drawable/category_crups</item>
+        <item>@drawable/category_milk</item>
+        <item>@drawable/category_mashrooms</item>
+        <item>@drawable/category_zelen</item>
+        <item>@drawable/category_nuts</item>
+        <item>@drawable/category_readyproducts</item>
+    </string-array>
+
 </resources>
