--- a/app/src/main/res/menu/menu_dynamics_search.xml
+++ b/app/src/main/res/menu/menu_dynamics_search.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_search"
         android:title="@android:string/search_go"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         yourapp:showAsAction="always"/>
 
 </menu>
