--- a/app/src/main/res/layout/fragment_recycler_add_ingredients.xml
+++ b/app/src/main/res/layout/fragment_recycler_add_ingredients.xml
@@ -3,6 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/category_toolbar"
+        android:id="@+id/include_category_toolbar" />
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
