--- a/app/src/main/res/layout/activity_all_recipes.xml
+++ b/app/src/main/res/layout/activity_all_recipes.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="StartActivity">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
@@ -19,3 +28,6 @@
             tools:layout="@layout/fragment_recycler_avl_recipes" />
     </LinearLayout>
 </LinearLayout>
+
+    <include layout="@layout/navdrawer" />
+</android.support.v4.widget.DrawerLayout>
