--- a/app/src/main/res/layout/activity_list_of_available_recipes.xml
+++ b/app/src/main/res/layout/activity_list_of_available_recipes.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="StartActivity">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,3 +41,5 @@
     </LinearLayout>
 
 </RelativeLayout>
+<include layout="@layout/navdrawer" />
+    </android.support.v4.widget.DrawerLayout>
