--- a/app/src/main/res/layout/activity_recipe_preview.xml
+++ b/app/src/main/res/layout/activity_recipe_preview.xml
@@ -13,6 +13,14 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="StartActivity">
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -80,3 +88,5 @@
         </LinearLayout>
     </FrameLayout>
 </FrameLayout>
+    <include layout="@layout/navdrawer" />
+        </android.support.v4.widget.DrawerLayout>
