--- a/app/src/main/res/layout/fragment_empty_img_start.xml
+++ b/app/src/main/res/layout/fragment_empty_img_start.xml
@@ -12,7 +12,8 @@
         android:layout_gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp" />
+        android:layout_marginBottom="60dp"
+        android:paddingBottom="35dp" />
 
 
 </RelativeLayout>
