--- a/app/src/main/res/layout/fragment_recycler_add_ingredients.xml
+++ b/app/src/main/res/layout/fragment_recycler_add_ingredients.xml
@@ -3,8 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/category_toolbar"
-        android:id="@+id/include_category_toolbar" />
+    <include
+        layout="@layout/category_toolbar"
+        android:id="@+id/include2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
