--- a/app/src/main/res/layout/framgent_start.xml
+++ b/app/src/main/res/layout/framgent_start.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/view2" >
+        android:id="@+id/start_button" >
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -64,6 +64,14 @@
                 android:fontFamily="sans-serif-condensed"
                 android:layout_toEndOf="@+id/numOfRecipesTV"
                 android:layout_marginTop="45dp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />
 
         </RelativeLayout>
 
