--- a/app/src/main/res/layout/fragment_gridview_categories.xml
+++ b/app/src/main/res/layout/fragment_gridview_categories.xml
@@ -4,14 +4,15 @@
     android:layout_height="match_parent">
 
     <GridView
+        android:id="@+id/categoryGridView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/categoriewGridView"
-        android:numColumns="2"
-        android:horizontalSpacing="0dp"
-        android:verticalSpacing="5dp"
-        android:layout_gravity="center_horizontal"
-        android:background="#e8333333"
-        android:paddingTop="20dp"
-        android:paddingLeft="5dp" />
+        android:layout_height="match_parent"
+        android:columnWidth="150dp"
+        android:gravity="center"
+        android:horizontalSpacing="5dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="20dp"
+        android:paddingTop="10dp"
+        android:background="#d8d65a00"/>
 </LinearLayout>
