--- a/app/src/main/res/layout/card_material_recipe_products.xml
+++ b/app/src/main/res/layout/card_material_recipe_products.xml
@@ -6,17 +6,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="14"
-        android:id="@+id/numOfIngs"
-        android:textSize="55dp"
+        android:id="@+id/text_products"
+        android:textSize="50dp"
         android:fontFamily="sans-serif-thin"
         android:textColor="#434343"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="PRODUCTS"
+        android:text="ПРОДУКТОВ"
         android:id="@+id/text_ings"
         android:gravity="center"
         android:fontFamily="sans-serif-medium"
