--- a/app/src/main/res/layout/card_material_recipe_time.xml
+++ b/app/src/main/res/layout/card_material_recipe_time.xml
@@ -5,19 +5,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="85"
-        android:id="@+id/time"
-        android:textSize="55dp"
+        android:text="90"
+        android:id="@+id/text_time"
+        android:textSize="50dp"
         android:fontFamily="sans-serif-thin"
         android:textColor="#434343"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
+        android:gravity="center"
         android:layout_centerHorizontal="true" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="MIN."
-        android:id="@+id/text_time"
+        android:text="МИН."
+
         android:gravity="center"
         android:fontFamily="sans-serif-medium"
         android:textSize="15dp"
