--- a/app/src/main/res/layout/framgent_start.xml
+++ b/app/src/main/res/layout/framgent_start.xml
@@ -37,7 +37,7 @@
                 android:gravity="bottom"
                 android:layout_alignBottom="@+id/imageButton"
                 android:paddingLeft="10dp"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="sans-serif-thin"
                 android:layout_alignTop="@+id/textView5"
                 android:layout_marginBottom="8dp" />
 
