--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -2,12 +2,14 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="190dp"
+
     android:layout_height="240dp"
     android:layout_margin="5dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    card_view:cardCornerRadius="10dp">
+    card_view:cardCornerRadius="10dp"
+    android:id="@+id/card_category_ingredient">
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,10 +19,42 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:id="@+id/name_count_image">
+            android:id="@+id/name_count_image"
+            android:background="#f0f0f0">
 
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Зелень"
+                android:id="@+id/name_of_category"
+                android:textColor="#000000"
+                android:fontFamily="sans-serif-black"
+                android:textSize="25dp"
+                android:layout_marginBottom="8dp"
+                android:layout_alignBottom="@+id/count_of_products"
+                android:layout_centerHorizontal="true" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="23 продукта"
+                android:id="@+id/count_of_products"
+                android:textColor="#606060"
+                android:textSize="12dp"
+                android:layout_marginTop="19dp"
+                android:layout_below="@+id/image_of_category"
+                android:layout_centerHorizontal="true" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/image_of_category"
+                android:src="@android:mipmap/sym_def_app_icon"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -28,10 +62,21 @@
             android:layout_height="match_parent"
             android:id="@+id/content"
             android:layout_below="@+id/name_count_image"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:background="#e4e4e4">
 
 
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Петрушка, укроп, хмель..."
+                android:id="@+id/textView11"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:textColor="#bdbdbd"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="12dp" />
         </RelativeLayout>
     </LinearLayout>
 
