--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -27,14 +27,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Зелень"
+                android:text="Фрукты и ягоды"
                 android:id="@+id/name_of_category"
                 android:textColor="#000000"
                 android:fontFamily="sans-serif-black"
                 android:textSize="25dp"
                 android:layout_marginBottom="8dp"
                 android:layout_alignBottom="@+id/count_of_products"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:gravity="left|center_vertical" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -52,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/image_of_category"
-                android:src="@android:mipmap/sym_def_app_icon"
+                android:src="@android:drawable/checkbox_off_background"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true" />
         </RelativeLayout>
